Fix(portfolio): prevent modal from being covered by other elements when scrolling

--- a/src/app/main-content/overlay/overlay.component.scss
+++ b/src/app/main-content/overlay/overlay.component.scss
@@ -8,7 +8,7 @@
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.7);
-  z-index: 1000;
+  z-index: 10001;
 }
 
 .contentWrapper {
